src/test/ui/numeric-fields.stderr
error[E0560]: struct `S` has no field named `0b1`
  --> $DIR/numeric-fields.rs:14:15
   |
LL |     let s = S{0b1: 10, 0: 11};
   |               ^^^ `S` does not have this field
   |
   = note: available fields are: `0`, `1`

error[E0026]: struct `S` does not have a field named `0x1`
  --> $DIR/numeric-fields.rs:17:17
   |
LL |         S{0: a, 0x1: b, ..} => {}
   |                 ^^^^^^ struct `S` does not have field `0x1`

error: aborting due to 2 previous errors

You've got a few errors: E0026, E0560
If you want more information on an error, try using "rustc --explain E0026"
